--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Make me into a grid!</title>
+        <title>Ray Murray to rescue!</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -21,16 +21,30 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
        
-        <section class="wrapper">
-            <div class="div-1">
-                Div 1
+        <section class="flex-container">
+            <header>
+                <h1>Hey I'm Ray.</h1>
+            </header>
+            <main>
+                <p>I am a <span>Responsive Designer & Developer</span> who takes pride in bringing out ideas in my head and allowing them flow on the web in a professional manner.</p>
+            </main>
+            <div id="div-1" class="flex-item">
+                <p>I was born in Little Rock Arkansas but I was raised in Atlanta Georgia. I spent alot of my life being envolved with athletics. I played football, ran track (100 and 200 meter race), and box. I spent my schools years as an exercise science major at Georgia State University, Arkansas Baptist College, and University of South Carolina but clearly I have deviated from that career path. I've taken an interest into coding because I'm able to bring out ideas and lay them on a desktop or laptop and add some finesse to it. Im really enjoying it!</p>
+              </div>
+            <div id="div-2" class="flex-item">
+                <p> ANIMAL LOVER: nothing loves you unconditionally like your animals. They can tell what moods you're in, they always confort you, and they are protective. Im a big mastiff lover, Cane Corso are one of my favorite dogs to have. Their loyalty is unmatched in my opinion. Go DAWGS!!
+                </p>
             </div>
-            <div class="div-2">
-                Div 2
+            <div id="div-3" class="flex-item"></div>
+                <p><span>FUN FACT:</span> I'm a huge Marvel fan!! <ol><li>Thor</li>
+                <li>The Hulk</li>
+            <li>The Wolverine</li></ol></span> </p>
             </div>
-            <div class="div-3">
-                Div 3
-            </div>
+            <footer>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-linkedin"></i>
+                <i class="fab fa-pinterest"></i>
+            </footer>
         </section>    
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
